<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cgpa_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/gpa"
                android:textColor="#FF0000"
                android:textSize="34sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/gfx" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="ERODE SENGUNTHAR EGINEERING COLLEGE"
                    android:fontFamily="@font/akaya_telivigala"
                    android:textColor="@color/black"
                    android:textSize="17sp"/>

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/srr" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:textStyle="bold"
                android:fontFamily="@font/aclonica"
                android:gravity="center"
                android:text="@string/grade"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/subject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/armata"
                    android:gravity="center_vertical"
                    android:text="Subjects Passed"
                    android:textColor="#287C2C"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/view"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/subj"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="60dp"
                    android:gravity="center"
                    android:background="@drawable/btn"
                    android:inputType="number"
                    android:minHeight="60dp"
                    android:maxLength="2"
                    android:textColor="#000000"
                    android:textSize="34sp"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/o"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/armata"
                    android:text="O"
                    android:textColor="#9910A3"
                    android:textSize="48sp" />

                <EditText
                    android:id="@+id/o_edtxt"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn"
                    android:inputType="number"
                    android:maxLength="2"
                    android:minWidth="70dp"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:textSize="34sp"
                    tools:ignore="SpeakableTextPresentCheck" />
                <View
                    android:id="@+id/view5"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1" />


                <TextView
                        android:id="@+id/aplus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/armata"
                        android:text="A+"
                        android:layout_marginEnd="10dp"
                        android:textColor="#9910A3"
                        android:textSize="48sp" />

                    <EditText
                        android:id="@+id/aplus_edtxt"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/btn"
                        android:inputType="number"
                        android:maxLength="2"
                        android:minWidth="70dp"
                        android:gravity="center"
                        android:textColor="#000000"
                        android:textSize="34sp"
                        tools:ignore="SpeakableTextPresentCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/armata"
                    android:text="A"
                    android:textColor="#9910A3"
                    android:layout_marginEnd="10dp"
                    android:textSize="48sp" />

                <EditText
                    android:id="@+id/a_edtxt"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn"
                    android:inputType="number"
                    android:maxLength="2"
                    android:minWidth="70dp"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:textSize="34sp"
                    tools:ignore="SpeakableTextPresentCheck" />

                <View
                    android:id="@+id/view6"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1" />


                <TextView
                        android:id="@+id/bplus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/armata"
                        android:layout_marginEnd="10dp"
                        android:text="B+"
                        android:textColor="#9910A3"
                        android:textSize="48sp" />

                    <EditText
                        android:id="@+id/bplus_edtxt"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/btn"
                        android:inputType="number"
                        android:maxLength="2"
                        android:minWidth="70dp"
                        android:gravity="center"
                        android:textColor="#000000"
                        android:textSize="34sp"
                        tools:ignore="SpeakableTextPresentCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/armata"
                    android:text="B"
                    android:textColor="#9910A3"
                    android:layout_marginEnd="10dp"
                    android:textSize="48sp" />

                <EditText
                    android:id="@+id/b_edtxt"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn"
                    android:inputType="number"
                    android:maxLength="2"
                    android:minWidth="70dp"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:textSize="34sp"
                    tools:ignore="SpeakableTextPresentCheck" />

            </LinearLayout>

            <Button
                android:id="@+id/result"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@drawable/btn1"
                android:onClick="result"
                android:text="Get GPA"
                android:textColor="#000000"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <!-- Your other views here -->

                <com.google.android.gms.ads.AdView
                    android:id="@+id/adView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:adSize="BANNER"
                    app:adUnitId="@string/ADMOB_BANNER_ID" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>