<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cgpacalc">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cgpa_text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/cgpa"
                android:textColor="#FF0000"
                android:textSize="34sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/gfx" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="@font/akaya_telivigala"
                    android:gravity="center"
                    android:text="ERODE SENGUNTHAR EGINEERING COLLEGE"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/srr" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:gravity="center"
                android:text="@string/gpatext"
                android:textColor="@android:color/holo_green_dark"
                android:textStyle="bold"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sem1"
                    android:text="Sem 1"
                    android:layout_marginEnd="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/armata"
                    android:textColor="#113EC1"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/sem1_edtxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn"
                    android:inputType="numberDecimal"
                    android:gravity="center"
                    android:maxLength="5"
                    android:minWidth="90dp"
                    android:minHeight="70dp"
                    android:textColor="#000000"
                    android:textSize="30sp"
                    tools:ignore="SpeakableTextPresentCheck" />

                <View
                    android:id="@+id/view5"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                    <TextView
                        android:id="@+id/sem2"
                        android:layout_marginEnd="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/armata"
                        android:textColor="#113EC1"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="Sem 2 " />

                    <EditText
                        android:id="@+id/sem2_edtxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn"
                        android:gravity="center"
                        android:inputType="numberDecimal"
                        android:maxLength="5"
                        android:minWidth="90dp"
                        android:minHeight="70dp"
                        android:textColor="#000000"
                        android:textSize="30sp"
                        tools:ignore="SpeakableTextPresentCheck"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sem3"
                    android:layout_marginEnd="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/armata"
                    android:textColor="#113EC1"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="Sem 3"
                    />

                <EditText
                    android:id="@+id/sem3_edtxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn"
                    android:inputType="numberDecimal"
                    android:maxLength="5"
                    android:gravity="center"
                    android:minWidth="90dp"
                    android:minHeight="70dp"
                    android:textColor="#000000"
                    android:textSize="30sp"
                    tools:ignore="SpeakableTextPresentCheck" />

                <View
                    android:id="@+id/view3"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                    <TextView
                        android:id="@+id/sem4"
                        android:layout_marginEnd="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/armata"
                        android:textColor="#113EC1"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="Sem 4" />

                    <EditText
                        android:id="@+id/sem4_edtxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn"
                        android:inputType="numberDecimal"
                        android:gravity="center"
                        android:maxLength="5"
                        android:minWidth="90dp"
                        android:minHeight="70dp"
                        android:textColor="#000000"
                        android:textSize="30sp"
                        tools:ignore="SpeakableTextPresentCheck"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sem5"
                    android:layout_marginEnd="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/armata"
                    android:textColor="#113EC1"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="Sem 5" />

                <EditText
                    android:id="@+id/sem5_edtxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn"
                    android:inputType="numberDecimal"
                    android:maxLength="5"
                    android:minWidth="90dp"
                    android:gravity="center"
                    android:minHeight="70dp"
                    android:textColor="#000000"
                    android:textSize="30sp"
                    tools:ignore="SpeakableTextPresentCheck" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                    <TextView
                        android:id="@+id/sem6"
                        android:layout_marginEnd="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/armata"
                        android:textColor="#113EC1"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="Sem 6" />

                    <EditText
                        android:id="@+id/sem6_edtxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn"
                        android:inputType="numberDecimal"
                        android:maxLength="5"
                        android:minWidth="90dp"
                        android:minHeight="70dp"
                        android:gravity="center"
                        android:textColor="#000000"
                        android:textSize="30sp"
                        tools:ignore="SpeakableTextPresentCheck"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sem7"
                    android:layout_marginEnd="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/armata"
                    android:textColor="#113EC1"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="Sem 7" />

                <EditText
                    android:id="@+id/sem7_edtxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn"
                    android:inputType="numberDecimal"
                    android:maxLength="5"
                    android:minWidth="90dp"
                    android:minHeight="70dp"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:textSize="30sp"
                    tools:ignore="SpeakableTextPresentCheck" />

                <View
                    android:id="@+id/view1"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                    <TextView
                        android:id="@+id/sem8"
                        android:layout_marginEnd="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/armata"
                        android:textColor="#113EC1"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="Sem 8" />

                    <EditText
                        android:id="@+id/sem8_edtxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn"
                        android:inputType="numberDecimal"
                        android:maxLength="5"
                        android:minWidth="90dp"
                        android:minHeight="70dp"
                        android:gravity="center"
                        android:textColor="#000000"
                        android:textSize="30sp"
                        tools:ignore="SpeakableTextPresentCheck"/>


            </LinearLayout>

            <Button
                android:id="@+id/result2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="60dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="60dp"
                android:background="@drawable/btn1"
                android:onClick="result2"
                android:text="Get CGPA"
                android:textColor="#000000"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <!-- Your other views here -->

                <com.google.android.gms.ads.AdView
                    android:id="@+id/adView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:adSize="BANNER"
                    app:adUnitId="@string/ADMOB_BANNER_ID" />

            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>